--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,12 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = [
+    "forge-std/=lib/forge-std/src/",
+    "@balancer/balancer-v2-monorepo/pkg/=lib/balancer-v2-monorepo/pkg/",
+    "@openzeppelin/openzeppelin-contracts/contracts/=lib/openzeppelin-contracts/contracts/",
+    "@uniswap/v3-periphery/contracts/interfaces=lib/v3-periphery/contracts/interfaces",
+    "@uniswap/v3-core/contracts/interfaces/=lib/v3-core/contracts/interfaces/",
+]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
