--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 solc_version = "0.8.18"
-via_ir = true
+via_ir = false
 
 remappings = [
     "forge-std/=lib/forge-std/src/",
